--- a/views/student_search.html
+++ b/views/student_search.html
@@ -21,9 +21,9 @@
         <li class="dropdown"><a class="join-us-button" href="#"><img id="profile-picture" src="/views/user.png" alt="Pfp" /></a>
             <div class="dropdown-content">
 
-                </a><a href="#">My Account</a>
+                <a href="/school - Copie/profil.html"><button type="button" class="dropdown-btn">My Account</button></a>
 
-                <a href="#">My Account</a>
+                
 
                 <a href="#">Log Out</a>
             </div>
@@ -40,7 +40,7 @@
         <li><a class="hideOnMobile" href="#">Contact</a></li>
         <li class="dropdown"><a class="hideOnMobile join-us-button" href="#"><img id="profile-picture" src="user.png" alt="Pfp" /></a>
             <div class="dropdown-content">
-                <a href="#">My Account</a>
+                <a href="/school - Copie/profil.html"><button type="button" class="dropdown-btn">My Account</button></a>
                 <a href="#">Log Out</a>
             </div>
         </li>
