--- a/views/teacher_student.ejs
+++ b/views/teacher_student.ejs
@@ -472,7 +472,7 @@ footer div {
       </ul>
     </nav>
     <nav>
-      <label class="logo"><img src="edulink3.png" alt="" /></label>
+      <label class="logo"><img src="/edulink3.png" alt="" /></label>
       <ul>
         <li><a class="hideOnMobile" href="#">HOME</a></li>
         <li><a class="hideOnMobile" href="#">about</a></li>
@@ -526,17 +526,17 @@ footer div {
       </div>
   
       <div class="divs-c-s"> 
-          <img src="edulinklogo.png" alt="" />
+          <img src="/edulinklogo.png" alt="" />
           <h4>your ultimate guide for educational excellence!</h4>
           <button class="button-footer">JOIN US ></button>
       </div>
   
       <div class="icons">
           <h3>CONTACT US</h3>
-          <i class="fab fa-facebook"></i>
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fa fa-envelope"></i>
+          <a href="https://www.facebook.com/profile.php?id=61558729667955"><i class="fab fa-facebook" id="facebook-icon"></i></a>
+        <a href="https://www.linkedin.com/in/edulink-website-0731a4307/"><i class="fab fa-linkedin" id="linkedin-icon"></i></a>
+        <a href="https://www.instagram.com/edulink_website/"><i class="fab fa-instagram" id="instagram-icon"></i></a>
+        <a href="mailto:edulink.website@gmail.com"><i class="fa fa-envelope" id="email-icon"></i></a>
       </div>
   </footer>
   
@@ -572,6 +572,6 @@ function calculateAge(birthdate) {
     return age;
 }
  </script>
- <script src="script.js"></script>
+ <script src="/script.js"></script>
 </body>
 </html>
